--- a/3 - Vektoren/3 - Solution.Rmd
+++ b/3 - Vektoren/3 - Solution.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einführung in R"
 author: "Clemens Brunner"
-date: "16.-17.2.2018"
+date: "14.-15.12.2018"
 output:
   html_document:
     fig_caption: no
@@ -9,7 +9,7 @@ output:
 ---
 
 ```{r set-options, echo=FALSE, cache=FALSE}
-options(width=110)
+options(width=100)
 library(knitr)
 opts_chunk$set(comment=NA)
 ```
@@ -18,8 +18,6 @@ opts_chunk$set(comment=NA)
 
 ## Übungen
 ### Übung 1
-Berechnen Sie die Fläche sowie den Umfang eines Kreises mit dem Radius 5 (erzeugen Sie dafür eine Variable `r`). Speichern Sie die Ergebnisse in Variablen `a` bzw. `u` ab. Wie lauten die Werte beider Variablen?
-
 ```{r}
 r <- 5
 a <- r**2 * pi
@@ -30,8 +28,6 @@ u
 
 
 ### Übung 2
-Erstellen Sie einen Vektor `x` mit den Elementen 4, 18, -7, 16, 4, 29, 8 und -44. Geben Sie `x` am Bildschirm aus. Erstellen Sie danach einen Vektor `y`, welcher die quadrierten Elemente aus `x` enthält (nutzen Sie dazu die Eigenschaft, dass R Rechenoperationen elementweise durchführt). Geben Sie `y` am Bildschirm aus. Zum Schluss erstellen Sie einen Vektor `z`, indem Sie `x` und `y` aneinanderhängen. Geben Sie `z` am Bildschirm aus. Mit welchem Befehl können Sie die Anzahl der Elemente in `z` bestimmen?
-
 ```{r}
 x <- c(4, 18, -7, 16, 4, 29, 8, -44)
 x
@@ -44,14 +40,6 @@ length(z)
 
 
 ### Übung 3
-Gegeben sei folgender Vektor:
-
-`x <- c(44, 23, -56, 98, 99, 32, 45, 19, 22)`
-
-Welche Elemente aus `x` sind gerade? Welche Elemente sind ungerade? Erstellen Sie zwei entsprechende logische Vektoren und geben Sie diese am Bildschirm aus. Geben Sie außerdem die entsprechenden Elemente von `x` aus.
-
-*Hinweis:* Gerade Zahlen ergeben einen Rest von 0 wenn man sie durch 2 dividiert, ungerade einen Rest von 1. Verwenden Sie daher den Operator `%%` für den Rest einer Division.
-
 ```{r}
 x <- c(44, 23, -56, 98, 99, 32, 45, 19, 22)
 even <- x %% 2 == 0
@@ -64,12 +52,6 @@ x[odd]
 
 
 ### Übung 4
-Erstellen Sie folgende Vektoren und geben Sie sie am Bildschirm aus:
-
-- Einen Vektor mit den ganzen Zahlen von 15 bis 40.
-- Einen Vektor mit den absteigenden Zahlen von 80 bis 60 in Dreierschritten.
-- Einen Vektor bestehend aus 77 Zahlen zwischen 14 und 39.
-
 ```{r}
 15:40
 seq(80, 60, -3)
@@ -78,21 +60,12 @@ seq(14, 39, length.out=77)
 
 
 ### Übung 5
-Erstellen Sie einen Zeichenketten-Vektor mit folgenden Einträgen: zuerst 15 mal `"Placebo"`, dann 15 mal `"Group 1"` und schließlich 15 mal `"Group 2"`.
-
 ```{r}
 rep(c("Placebo", "Group 1", "Group 2"), each=15)
 ```
 
 
 ### Übung 6
-Erstellen Sie einen Vektor `k` mit den geraden Zahlen von 0 bis 40. Geben Sie dann durch Indizieren die folgenden Elemente dieses Vektors am Bildschirm aus:
-
-- Alle Elemente bis auf das 8. und 9. Element.
-- Die ersten fünf Elemente.
-- Die Elemente 2, 5 und 26 (fällt Ihnen hier etwas auf?).
-- Alle Elemente, die größer als 11 sind.
-
 ```{r}
 k <- seq(0, 40, 2)
 k[-c(8, 9)]
@@ -103,12 +76,6 @@ k[k > 11]
 
 
 ### Übung 7
-Erstellen Sie folgenden Vektor:
-
-`t <- c(10, 20, NA, 30, 40)`
-
-Berechnen Sie dann mit der Funktion `mean` den Mittelwert von `t`. Was bewirkt der fehlende Wert `NA`? Sehen Sie in der Hilfe zum Befehl `mean` nach, wie Sie fehlende Werte bei der Berechnung ignorieren können und führen Sie diese Berechnung durch.
-
 ```{r}
 t <- c(10, 20, NA, 30, 40)
 mean(t)
@@ -117,15 +84,15 @@ mean(t, na.rm=TRUE)
 
 
 ### Übung 8
-Gegeben seien folgende Standardabweichungen von verschiedenen Variablen:
-
-`std <- c(1, 2.22, 11.3, 7.8, 3.4, 6)`
-
-Wie können Sie daraus die Varianzen berechnen? Wie können Sie daraus den Standardfehler berechnen?
-
 ```{r}
 std <- c(1, 2.22, 11.3, 7.8, 3.4, 6)
 std**2  # Varianzen
-std / sqrt(length(std))  # Standardfehler
 ```
 
+---
+
+```{r, fig.retina = NULL, echo=FALSE}
+knitr::include_graphics("cc_license.png")
+```
+
+Diese Unterlagen sind lizenziert unter einer [Creative Commons Namensnennung - Nicht-kommerziell - Weitergabe unter gleichen Bedingungen 4.0 International Lizenz](http://creativecommons.org/licenses/by-nc-sa/4.0/).
