--- a/1 - Grundlagen/1 - Grundlagen.Rmd
+++ b/1 - Grundlagen/1 - Grundlagen.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einführung in R"
 author: "Clemens Brunner"
-date: "16.-17.2.2018"
+date: "14.-15.12.2018"
 output:
   html_document:
     fig_caption: no
@@ -9,7 +9,7 @@ output:
 ---
 
 ```{r set-options, echo=FALSE, cache=FALSE}
-options(width=110)
+options(width=100)
 library(knitr)
 opts_chunk$set(comment=NA)
 ```
@@ -43,7 +43,7 @@ R ist eine Programmierumgebung für statistische Datenanalysen, Berechnungen und
 - Sehr gut geeignet für reproduzierbare Datenanalysen
 
 ### Wie sieht R-Code aus?
-R bedient man, indem man Befehle in der sogenannten Console oder in einem Script eingibt. Statistische Berechnungen werden daher nicht wie z.B. in SPSS über eine grafische Oberfläche durchgeführt. Dies ist keineswegs ein Nachteil, sondern hat ganz im Gegenteil mehrere Vorteile. Insbesondere wird die Datenanalyse dadurch reproduzierbar und wiederverwendbar. Typische Ein- und Ausgaben in R sehen beispielsweise wie folgt aus:
+R bedient man, indem man Befehle entweder in der sogenannten Console eingibt oder ein Script ausführt. Statistische Berechnungen werden daher nicht wie z.B. in SPSS über eine grafische Oberfläche durchgeführt. Dies ist keineswegs ein Nachteil, sondern hat ganz im Gegenteil mehrere Vorteile. Insbesondere wird die Datenanalyse dadurch reproduzierbar und wiederverwendbar. Typische Ein- und Ausgaben in R sehen beispielsweise wie folgt aus:
 
 ```{R}
 x <- c(1, 18, 12, 3, 8, 22, 12, 4, 13, 21, 27, 1)
@@ -59,14 +59,14 @@ Im Laufe dieser Veranstaltung werden wir auf die einzelnen Bestandteile dieses C
 
 ## Installation
 ### R
-Alle relevanten Informationen zur Installation von R sind auf der [offiziellen Website](https://www.r-project.org/) zu finden. Hier finden sich detaillierte Anleitungen für jede unterstützte Plattform. Der Download-Link befindet sich in der linken Spalte ganz oben unter "Download" - "CRAN". Es ist sinnvoll, stets mit der aktuellsten Version von R zu arbeiten (bei der Erstellung dieses Dokuments war dies Version 3.4.3).
+Alle relevanten Informationen zur Installation von R sind auf der [offiziellen Website](https://www.r-project.org/) zu finden. Hier finden sich detaillierte Anleitungen für jede unterstützte Plattform. Der Download-Link befindet sich in der linken Spalte ganz oben unter "Download" - "CRAN". Es ist sinnvoll, stets mit der aktuellsten Version von R zu arbeiten (bei der Erstellung dieses Dokuments war dies Version 3.5.1).
 
 ```{r, fig.retina = NULL, echo=FALSE}
 knitr::include_graphics("R_logo.png")
 ```
 
 ### RStudio
-R ist modular aufgebaut und besteht aus einem Kern sowie einer grafischen Oberfläche (GUI[^1]). Obwohl man mit der mitgelieferten GUI relativ komfortabel arbeiten kann (vor allem unter macOS), hat sich dennoch die alternative Oberfläche [RStudio](https://www.rstudio.com/) als De-Facto-Standard durchgesetzt. RStudio ist eine reine GUI, d.h. es wird eine installierte R-Umgebung vorausgesetzt. Auch hier ist es ratsam, stets die aktuellste Version zu verwenden (bei der Erstellung dieses Dokuments war dies Version 1.1.423).
+R ist modular aufgebaut und besteht aus einem Kern sowie einer grafischen Oberfläche (GUI[^1]). Obwohl man mit der mitgelieferten GUI relativ komfortabel arbeiten kann (vor allem unter macOS), hat sich dennoch die alternative Oberfläche [RStudio](https://www.rstudio.com/) als De-Facto-Standard durchgesetzt. RStudio ist eine reine GUI, d.h. es wird eine installierte R-Umgebung vorausgesetzt. Auch hier ist es ratsam, stets die aktuellste Version zu verwenden (bei der Erstellung dieses Dokuments war dies Version 1.1.463).
 
 ```{r, fig.retina = NULL, echo=FALSE}
 knitr::include_graphics("RStudio_logo.png")
@@ -79,7 +79,7 @@ knitr::include_graphics("RStudio_logo.png")
 Um R zu verwenden, startet man entweder die mitgelieferte grafische Oberfläche oder RStudio - unter Windows z.B. aus dem Startmenü, unter macOS aus den Anwendungen oder per Spotlight. Wir werden in dieser Veranstaltung ausschließlich RStudio verwenden.
 
 ### Verwendung als Taschenrechner
-R kann man als umfangreichen Taschenrechner verwenden. Die Eingabe von Rechenoperationen ist intuitiv, ein sogenannter Prompt (`>`) in der Konsole signalisiert, dass R bereit für Eingaben ist. Nach Eingeben eines Befehls und Bestätigen mit der Eingabetaste wird das Ergebnis der Berechnung ausgegeben (ignorieren wir vorerst die Zahlen in eckigen Klammern, die vor jeder Ausgabe stehen). Die Grundrechenarten funktionieren wie erwartet:
+R kann man als umfangreichen Taschenrechner verwenden. Die Eingabe von Rechenoperationen ist intuitiv, ein sogenannter Prompt (`>`) in der Console signalisiert, dass R bereit für Eingaben ist. Nach Eingeben eines Befehls und Bestätigen mit der Eingabetaste wird das Ergebnis der Berechnung ausgegeben (ignorieren wir vorerst die Zahlen in eckigen Klammern, die vor jeder Ausgabe stehen). Die Grundrechenarten funktionieren wie erwartet:
 
 ```{r}
 13 + 7
@@ -145,3 +145,11 @@ Gegeben seien folgende Messwerte: 11, 27, 15, 10, 32, 18, 25, 22, 29, 11. Berech
 Berechnen Sie in R das Ergebnis des folgenden Ausdrucks (achten Sie auf die richtige Klammersetzung):
 
 $$\sqrt 2 \cdot \frac{(5^3 - 2) \cdot \sqrt{18}}{\left(\frac{7}{5} + 13.2 \right) \cdot 7^\frac{2}{3}}$$
+
+---
+
+```{r, fig.retina = NULL, echo=FALSE}
+knitr::include_graphics("cc_license.png")
+```
+
+Diese Unterlagen sind lizenziert unter einer [Creative Commons Namensnennung - Nicht-kommerziell - Weitergabe unter gleichen Bedingungen 4.0 International Lizenz](http://creativecommons.org/licenses/by-nc-sa/4.0/).
