--- a/2 - Die R-Umgebung/2 - Solution.Rmd
+++ b/2 - Die R-Umgebung/2 - Solution.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einführung in R"
 author: "Clemens Brunner"
-date: "16.-17.2.2018"
+date: "14.-15.12.2018"
 output:
   html_document:
     fig_caption: no
@@ -9,7 +9,7 @@ output:
 ---
 
 ```{r set-options, echo=FALSE, cache=FALSE}
-options(width=110)
+options(width=100)
 library(knitr)
 opts_chunk$set(comment=NA)
 ```
@@ -18,8 +18,6 @@ opts_chunk$set(comment=NA)
 
 ## Übungen
 ### Übung 1
-Installieren Sie die Pakete `tidyverse`, `Hmisc` und `psych` - welche R-Befehle verwenden Sie dafür? Nennen Sie die Versionsnummern dieser beiden Pakete. Mit welchen Befehlen können Sie die installierten Pakete anschließend aktivieren?
-
 Man installiert Pakete mit `install.packages`, d.h. für die drei Pakete sind folgende Befehle auszuführen: `install.packages("tidyverse")`, `install.packages("Hmisc")` und `install.packages("psych")`. Anschließend kann man mit `library` die gewünschten Pakete aktivieren, also hier:
 
 ```{r eval=FALSE}
@@ -37,22 +35,12 @@ packageVersion("psych")
 ```
 
 ### Übung 2
-Zeigen Sie die Hilfe zum Befehl `help` an. Welche zwei Möglichkeiten haben Sie dafür?
-
 ```{r}
 help(help)
 ?help
 ```
 
 ### Übung 3
-Erstellen Sie in RStudio ein einfaches Script mit dem Namen `my_first_script.R`. Fügen Sie folgende Elemente in dieses Script ein:
-
-- Eine Kommentarzeile mit dem Inhalt "Übung 3"
-- Aktivieren des Pakets `psych`
-- Berechnung des Mittelwerts der Zahlen 45, 66, 37, 54, 17 und 22 (nur mit Grundrechenarten)
-
-Das fertige Script sollte also aus drei Zeilen bestehen (Sie könnten und sollten zur Erhöhung der Übersichtlichkeit aber zusätzliche leere Zeilen einfügen).
-
 ```{r eval=FALSE}
 # Übung 3
 
@@ -62,13 +50,17 @@ library(psych)
 ```
 
 ### Übung 4
-Installieren Sie das Paket `swirl`. Aktivieren Sie anschließend dieses Paket. Installieren Sie dann mit dem Befehl `install_from_swirl("Open Intro")` einen einführenden Kurs über statistische Grundbegriffe. Danach starten Sie das Lernprogramm mit der Funktion `swirl()`.
-
-Nach einigen Informationen über die Verwendung von `swirl` können Sie einen Kurs auswählen - wählen Sie "Open Intro". Es gibt nur eine Lektion namens "Overview of Statistics" - wählen Sie diese Lektion aus und schließen Sie diese Lektion komplett ab (die Dauer beträgt ungefähr 30 Minuten).
-
 ```{r eval=FALSE}
 install.packages("swirl")
 library(swirl)
 install_from_swirl("Open Intro")
 swirl()
 ```
+
+---
+
+```{r, fig.retina = NULL, echo=FALSE}
+knitr::include_graphics("cc_license.png")
+```
+
+Diese Unterlagen sind lizenziert unter einer [Creative Commons Namensnennung - Nicht-kommerziell - Weitergabe unter gleichen Bedingungen 4.0 International Lizenz](http://creativecommons.org/licenses/by-nc-sa/4.0/).
